# virtualWeightSorter

./: .gitignore  DEPLOY.md  MULTI_PC_GIT_USAGE.md  PRODUCT_REALIZATION_STRUCTURE.md  README.md  RECOVERY_LOG_20260215.md  app.js  auto-push.ps1  auto-push.ps1.bak  index.html  style.css  앞으로도전하고싶은목록.md  추천색.md
10_Components_Basic/Sensors/DHT22_Basic/: .env.example  .gitattributes  .gitignore  LICENSE  README.MD  pyproject.toml
10_Components_Basic/Sensors/DHT22_Basic/.github/workflows/: quality-security.yml
10_Components_Basic/Sensors/DHT22_Basic/docs/: AI_CODING_GUIDELINES.md  CODE_QUALITY_GUIDE.md  project_next_retrospective.md  release.md  release_03.md
10_Components_Basic/Sensors/DHT22_Basic/src/arduino/dht22_sensor/: dht22_sensor.ino
10_Components_Basic/Sensors/DHT22_Basic/src/python/dashboard/: app.py
10_Components_Basic/Sensors/DHT22_Basic/src/python/utils/: data_processor.py  env_loader.py  serial_reader.py
10_Components_Basic/Sensors/DS18B20_Basic/05_P_ds18b20_monitoring/: .gitignore  README.md  README_DEV.md  analyze_metrics.py  auto_set_sensor_ids.py  check_dashboard_status.py  dashboard_with_logger.py  debug_sensor_data.py  debug_serial.py  eeprom계획서.md  main.py  platformio.ini  pyproject.toml  pytest.ini  requirements.txt  run_dashboard.py  run_dashboard_with_logs.py  simple_115200_test.py  simple_check.py  temp_app.py  temp_id_test.py  test_115200.py  test_arduino_commands.py  test_arduino_connection.py  test_arduino_simulator.py  test_baudrates.py  test_clean_log_card.py  test_compact_log_card.py  test_correct_arduino_commands.py  test_id_change_debug.py  test_id_change_full.py  test_json_communication.py  test_realtime_integration.py  test_sensor_commands.py  test_sensor_id_fix.py  test_sensor_id_setup.py  test_sensor_logger.py  test_sensor_sorting.py  test_serial_port_simulator.py  test_serial_simulator.py  (+1 more)
10_Components_Basic/Sensors/DS18B20_Basic/05_P_ds18b20_monitoring/.claude/: CODING_RULES_AND_QUALITY_CHECK.md  architecture.instructions.md  settings.local.json
10_Components_Basic/Sensors/DS18B20_Basic/05_P_ds18b20_monitoring/docs/: PROJECT_SUMMARY.md
10_Components_Basic/Sensors/DS18B20_Basic/05_P_ds18b20_monitoring/docs/architecture/: 01_architecture.md
10_Components_Basic/Sensors/DS18B20_Basic/05_P_ds18b20_monitoring/docs/old_release/: release.md  release2.md  release3.md  release4.md  release5-1.md  release5.md  release6.md  release7.md  release8.md
10_Components_Basic/Sensors/DS18B20_Basic/05_P_ds18b20_monitoring/docs/protocol/: protocol.md
10_Components_Basic/Sensors/DS18B20_Basic/05_P_ds18b20_monitoring/docs/release/: release01.md  (+2 more)
10_Components_Basic/Sensors/DS18B20_Basic/05_P_ds18b20_monitoring/scripts/: setup_venv.ps1
10_Components_Basic/Sensors/DS18B20_Basic/05_P_ds18b20_monitoring/tests/: conftest.py  temp_id_test.py  test_app_import.py  test_backend_main.py  test_data_manager.py  test_ds18b20_simulator.py  test_json_exporter_validation.py  test_metrics_collector_fallback.py  test_metrics_trend.py  test_phase_a_completion.py  test_protocol.py  test_serial_handler.py  test_simulator_manager.py
10_Components_Basic/Sensors/DS18B20_Basic/05_P_ds18b20_monitoring/tools/: run_all_checks.py  run_dashboard_multi_simulator.py  run_dashboard_simulator.py
20_Systems_Monitoring/Env_Monitor/Dust_Bluetooth/: CLAUDE.md  main.py  platformio.ini  pyproject.toml
20_Systems_Monitoring/Env_Monitor/Dust_Bluetooth/.claude/: claude.md
20_Systems_Monitoring/Env_Monitor/Dust_Bluetooth/docs/00_plan/: 01_plan.md  02_todoList.md  howStart.md
20_Systems_Monitoring/Env_Monitor/Dust_Bluetooth/docs/01_architecture/: 01_기초연결-2025-05-24-1755.excalidraw
20_Systems_Monitoring/Env_Monitor/Dust_Bluetooth/docs/03_development/: 01_dht22.excalidraw  01_dht22.md  02_pms7003.md
20_Systems_Monitoring/Env_Monitor/Dust_Bluetooth/src/: main.cpp
20_Systems_Monitoring/Env_Monitor/Dust_Bluetooth/tools/: serial_monitor.py
20_Systems_Monitoring/Env_Monitor/Dust_Bluetooth/tools/quality/: enhanced_auto_fix.py  quality_check.py
20_Systems_Monitoring/Env_Monitor/Dust_Bluetooth/tools/security/: security_scan_20250815_120940.json  security_scan_20250817_230053.json  security_scan_20250818_203541.json  security_scan_20250826_082915.json  trufflehog_check.py
20_Systems_Monitoring/Env_Monitor/Power_Logger/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  needUninstall_requirement.md  platformio.ini  pyproject.toml
20_Systems_Monitoring/Env_Monitor/Power_Logger/docs/: 01_claude_project_retrospective_and_ai_optimization.md  02_grok4_project_retrospective_and_ai_optimization.md  pre_release_testing_checklist.md  project_retrospective.md  public_repository_plan.md  release.md  remind_project_report.md  remind_project_report3.md
20_Systems_Monitoring/Env_Monitor/Power_Logger/docs/architecture/: 02_#2_sonnet4-0_architecture.md
20_Systems_Monitoring/Env_Monitor/Power_Logger/docs/ex_arduino_ina_docs/: 기초아이디어.txt
20_Systems_Monitoring/Env_Monitor/Power_Logger/docs/issue/: README.md  code_quality_improvement_checklist.md
20_Systems_Monitoring/Env_Monitor/Power_Logger/src/arduino/: README.md  arduino.ino  uno_r4_wifi_ina219_simulator.ino
20_Systems_Monitoring/Env_Monitor/Power_Logger/tools/: code_quality_checker.py
20_Systems_Monitoring/Env_Monitor/Power_Logger/tools/gitCheck/: README.md  trufflehog_scan.py
legacy/02_P_randomNumber/: README.md  detailed_statistical_report.txt  platformio.ini  pyproject.toml  requirements-dev.txt  run_dashboard.py
legacy/02_P_randomNumber/.claude/: settings.local.json
legacy/02_P_randomNumber/config/: arduino_implementations_real.yaml
legacy/02_P_randomNumber/docs/: 02_USER_GUIDE.md  03_API_REFERENCE.md  04_PERFORMANCE_ANALYSIS.md
legacy/02_P_randomNumber/src/arduino_simulation/: arduino_mock.py  multi_implementation_sim.py  random_generator_sim.py  simulation_runner.py
legacy/02_P_randomNumber/src/arduino_simulation/analysis/: statistical_analysis.py
legacy/02_P_randomNumber/src/arduino_simulation/dashboards/: multi_dashboard.py
legacy/02_P_randomNumber/tests/python/: __init__.py
(+1683 files in other folders)
