[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python"]

[project]
name = "dht22-monitoring"
version = "0.1.0"
description = "DHT22 Environmental Monitoring System with Arduino and Dash Dashboard"
authors = [
    { name = "Developer", email = "developer@example.com" }
]
dependencies = [
    "dash>=2.17.0",
    "dash-bootstrap-components>=1.5.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
    "pyserial>=3.5",
    "numpy>=1.24.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "bandit>=1.7.5",
    "safety>=3.0.0",
    "gitpython>=3.1.40",
    "matplotlib>=3.7.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.9.4",
    "mypy>=1.17.1",
    "pandas-stubs>=2.2.2.240807",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.9",
    "types-pyserial>=3.5.0.20250809",
]

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [
    ".venv",
    "__pycache__",
    ".git",
    "dist",
    "build",
    ".pytest_cache",
    ".mypy_cache",
    "tools/security/trufflehog*",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # bandit (security)
    "T20", # flake8-print
]
ignore = [
    "S101",  # Allow assert statements
    "T201",  # Allow print statements in scripts
    "S603",  # Allow subprocess calls
    "S607",  # Allow subprocess with shell=True in tools
    "E501",  # Allow long lines (formatter handles this better)
    "E722",  # Allow bare except in simple cases
    "S110",  # Allow try-except-pass for compatibility
    "S105",  # Allow hardcoded passwords in tests/examples
    "E402",  # Allow imports not at top (sometimes needed for path setup)
    "S104",  # Allow binding to all interfaces (0.0.0.0) in development
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tools/**/*.py" = ["T201", "S603", "S607", "E501"]  # Allow prints, subprocess, long lines in tools
"tests/**/*.py" = ["S101", "S105", "E501"]  # Allow asserts, hardcoded passwords in tests, long lines
"src/python/dashboard/app.py" = ["E402", "S104"]  # Allow late imports and binding to all interfaces in dev



[tool.mypy]
python_version = "3.9"
warn_return_any = false  # Allow Any returns for flexibility
warn_unused_configs = false  # Don't warn about unused configs
disallow_untyped_defs = false  # Allow untyped functions
disallow_incomplete_defs = false  # Allow incomplete type definitions
check_untyped_defs = false  # Don't check untyped functions
no_implicit_optional = false  # Allow implicit Optional
warn_redundant_casts = false  # Don't warn about redundant casts
warn_unused_ignores = false  # Don't warn about unused ignores
warn_no_return = false  # Don't warn about missing returns
warn_unreachable = false  # Don't warn about unreachable code
strict_equality = false  # Allow flexible equality checks
ignore_missing_imports = true  # Ignore missing imports (key for external libs)
exclude = [
    "^tools/security/",
    "^tools/metrics/",  # Exclude metrics tools
    "^\\.venv/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/python",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "-v"
]

[tool.bandit]
exclude_dirs = [".venv", "tests", "tools/security"]
skips = ["B101"]  # Skip assert_used test
