[project]
name = "06-weigher-sorter"
version = "0.1.0"
description = "Arduino R4 Minima Weigher-Sorter Simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "streamlit>=1.48.1",
]

[project.scripts]
test = "run:main"

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
