[project]
name = "ds18b20-monitoring"
version = "0.1.0"
description = "DS18B20 온도 센서 모니터링 시스템 - Arduino Mock 시뮬레이터와 Dash 대시보드"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "koreatogether", email = "koreatogether@example.com"}
]
keywords = ["ds18b20", "temperature", "monitoring", "arduino", "dash", "iot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "dash>=2.18.0",  # Updated for Flask 3.1+ compatibility
    "dash-bootstrap-components>=1.6.0",
    "dash-daq>=0.6.0",
    "fastapi>=0.116.1",
    "flask>=3.1.1",  # Security fix for CVE-2025-47278
    "httpx>=0.28.1",
    "uvicorn>=0.20.0",
    "pandas>=2.1.4",
    "plotly>=5.17.0",
    "pyserial>=3.5",
]

[dependency-groups]
dev = [
    "mypy==1.7.1",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "radon==6.0.1",
    "ruff==0.1.6",
    "safety==2.3.5",
]

[tool.ruff]
target-version = "py310"
line-length = 88

# Exclude utility test scripts in tools/tests from strict linting (they are manual helpers)
exclude = [
    "tools/tests/**",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
    "N",   # pep8-naming
    "PT",  # flake8-pytest-style
]
ignore = [
    "E501",  # line too long, handled by black (not enforced here)
    "B008",  # allow function calls in argument defaults for factories
    "C901",  # complexity (kept until refactor)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["S101", "D", "E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
follow_imports = "silent"
explicit_package_bases = true
namespace_packages = true

# Ignore UI-heavy dynamically generated modules to focus typing on core logic.
[[tool.mypy.overrides]]
module = "dashboard.port_manager"
ignore_errors = true

[[tool.mypy.overrides]]
module = "dashboard.port_ui_components"
ignore_errors = true

[[tool.mypy.overrides]]
module = "dashboard.port_callbacks"
ignore_errors = true

[[tool.mypy.overrides]]
module = "dashboard.app"
ignore_errors = true

[[tool.mypy.overrides]]
module = "dashboard.serial_handler_fixed"
ignore_errors = true

[[tool.mypy.overrides]]
module = "dashboard.serial_handler"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
